--- a/components/personajes/Personaje.css
+++ b/components/personajes/Personaje.css
@@ -6,6 +6,11 @@
   cursor: pointer;
 }
 
+.carta_personaje:hover {
+  transform: scale(1.10);
+  transition-duration: 0.2s;
+}
+
 .carta_personaje_inner {
   position: relative;
   width: 100%;
@@ -13,7 +18,7 @@
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 .carta_personaje.flipped .carta_personaje_inner {
@@ -29,7 +34,6 @@
   border-radius: 20px;
   background-color: black;
   color: white;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,10 +43,12 @@
 
 .carta_personaje_front {
   z-index: 2;
+  padding: 20px;
 }
 
 .carta_personaje_back {
   transform: rotateY(180deg);
+  padding: 5px;
 }
 
 .personaje_img {
