--- a/screenFunctions/screenEpisodios.web.css
+++ b/screenFunctions/screenEpisodios.web.css
@@ -115,13 +115,13 @@
 
 @font-face {
     font-family: 'Inter';
-    /*src: url('/fonts/Inter-VariableFont.ttf') format('truetype');*/
+    src: url('/fonts/Inter-VariableFont.ttf') format('truetype');
     font-weight: 100 900;
     font-style: normal;
 }
 @font-face {
     font-family: 'Inter';
-    /*src: url('/fonts/Inter-Italic-VariableFont.ttf') format('truetype');*/
+    src: url('/fonts/Inter-Italic-VariableFont.ttf') format('truetype');
     font-weight: 100 900;
     font-style: italic;
 }
