--- a/components/homepage/TextoLugares.css
+++ b/components/homepage/TextoLugares.css
@@ -13,7 +13,7 @@
     font-family: 'Inter', sans-serif;
     font-weight: 100;
     font-style: italic;
-    font-size: 30px;
+    font-size: 25px;
     color: white;
 }
 
@@ -30,14 +30,13 @@
 
 @font-face {
     font-family: 'Inter';
-    /*src: url('/fonts/Inter-VariableFont.ttf') format('truetype');*/
+    src: url('/fonts/Inter-VariableFont.ttf') format('truetype');
     font-weight: 100 900;
     font-style: normal;
 }
-
 @font-face {
     font-family: 'Inter';
-    /*src: url('/fonts/Inter-Italic-VariableFont.ttf') format('truetype');*/
+    src: url('/fonts/Inter-Italic-VariableFont.ttf') format('truetype');
     font-weight: 100 900;
     font-style: italic;
 }
