--- a/screenFunctions/screenPersonajes.web.css
+++ b/screenFunctions/screenPersonajes.web.css
@@ -101,20 +101,47 @@
 
 .search-bar-personajes {
   display: flex;
-  gap: 1rem;
+  flex-direction: row;
+  flex-wrap: nowrap;
   align-items: baseline;
+  gap: 10px;
   margin-top: 20px;
+  width: 100%;
 }
 
-.search-input-personajes,
-.select-input {
+.search-input-personajes {
   padding: 10px;
   font-size: 16px;
   border-radius: 5px;
   border: 1px solid #ccc;
+  width: 300px;
   font-family: Inter, sans-serif;
   font-weight: 500;
-  width: 300px;
+
+}
+.select-input-origin,
+.select-input-location {
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-family: Inter, sans-serif;
+  font-weight: 500;
+  width: 320px;
+  box-sizing: border-box;
+}
+
+.search-bar-personajes .select-input-origin {
+  flex: 0 0 280px;
+  min-width: 280px;
+  max-width: 280px;
+  box-sizing: border-box;
+}
+.search-bar-personajes .select-input-location {
+  flex: 0 0 280px;
+  min-width: 280px;
+  max-width: 280px;
+  box-sizing: border-box;
 }
 
 .lista_personajes {
@@ -157,4 +184,17 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('/fonts/Inter-VariableFont.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url('/fonts/Inter-Italic-VariableFont.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: italic;
 }
